# simpleIRC

./: .gitignore  CMakeLists.txt  README
src/: main.c  server.c  server.h
src/commands/: channel.c  channel.h  message.c  message.h  register.c  register.h
src/utils/: log.c  parse.c  parse.h  reply.c  reply.h
